--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,6 @@
 ---
-import LanguageSelector from "@components/LanguageSelector.astro";
 import HeaderLink from "@components/Link.astro";
-import ThemeSelector from "@components/ThemeSelector.astro";
 import { PAGES, SITE_TITLE } from "@src/consts";
-import { localizePath } from "@utils/t.ts";
 import { tFn } from "@utils/t.ts";
 
 const url = Astro.url;
@@ -29,7 +26,7 @@ const t = tFn(Astro.url);
 	x-init="init()"
 	class="flex flex-col max-w-screen-xl lg:py-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 z-10 md:pt-2 relative">
 	<div class="p-4 flex flex-row items-center justify-between">
-		<a	href={localizePath("/", url)}
+		<a	href={url}
 			class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
 			{SITE_TITLE}
 		</a>
@@ -109,10 +106,5 @@ const t = tFn(Astro.url);
 				)
 			}
 		</div>
-		<ThemeSelector />
-		<LanguageSelector
-			showFlag={false}
-			class="appearance-none cursor-pointer pl-3 pr-2 py-1.5 rounded-md dark:bg-stone-950 dark:text-white focus-visible:outline-none"
-		/>
 	</nav>
 </header>
